@@ -37,7 +37,7 @@ extends 'Net::CLI::Interact::Transport::Base';
 # ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 
 # allow native use of Net::Telnet on Unix
-if (not Net::CLI::Interact::Transport::is_win32()) {
+if (not Net::CLI::Interact::Transport::Base::is_win32()) {
     has '+use_net_telnet_connection' => ( default => quote_sub('1') );
 }
 
